5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1596_842.log
== TEST (2019-03-26 19:00:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a função int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
print(primeiro_digito)

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
print(soma_dos_digitos)














-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
NameError: name 'seg_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:00:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#a função int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada // 1000
print(primeiro_digito)

soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
print(soma_dos_digitos)














-- EXECUTION TIME:
0.160364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 9, in <module>
    soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + q_dig
NameError: name 'seg_dig' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:21:55) 
-- CODE:
a=int(input("Digite um numero de 4 digitos:")
b=a//1000
c=a%1000
d=c//100
e=c%100
f=e//10
g=e%10
print(b+d+f+g)














-- EXECUTION TIME:
0.199104
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 2
    b=a//1000
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:39:59) 
-- CODE:
a=int(input("Digite um numero de 4 digitos:"))
b=a//1000
c=a%1000
d=c//100
e=c%100
f=e//10
g=e%10
print(b+d+f+g)














-- EXECUTION TIME:
0.221442
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
